feat: 新增日期提醒

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^2.7.2"
   },
   "dependencies": {
-    "dayjs": "^1.11.3"
+    "dayjs": "^1.11.3",
+    "lunar-javascript": "^1.2.33"
   }
 }
