--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
-    "svelte": "^3.44.0",
-    "vite": "^2.7.2"
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "svelte": "^4.2.12",
+    "vite": "^5.2.0"
   },
   "dependencies": {
     "dayjs": "^1.11.3",
     "lunar-javascript": "^1.2.33"
+  },
+  "volta": {
+    "node": "20.11.1"
   }
 }
